# DEFTMatcher

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  ruff.toml
.github/actions/install_package/: action.yaml
.github/actions/python_from_pyproject/: action.yaml
.github/actions/setup_env/: action.yaml
.github/workflows/: cd.yaml  ci.yaml  master_cache.yaml
requirements/: environment.yml  requirements.txt  requirements_test.txt
scripts/: foo_script.py
src/deft_matcher/: ambiguity_resolver.py  decisive_matcher.py  deft_matcher.py  matcher.py  utils.py
src/deft_matcher/ambiguity_resolvers/: choose_first.py  choose_first_resolver.py
src/deft_matcher/matchers/: exact_matcher.py  fast_hpo_cr_matcher.py  fast_mondo_cr_matcher.py  synonym_matcher.py
src/deft_matcher/matchers/rag_hpo_matcher/: candidate_retriever.py  ollama_client.py  rag_hpo_matcher.py  system_message.txt
tests/: test_choose_first_resolver.py  test_deft_matcher.py  test_exact_matcher.py  test_fast_hpo_cr_matcher.py  test_fast_mondo_cr_matcher.py  test_foo.py  test_rag_hpo_matcher.py  test_synonym_matcher.py
