[build-system]
requires = ["setuptools>=80.9.0", "wheel==0.45.1", "setuptools_scm==8.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "robinson-group-python-template"
description = "A template for python projects build in the robinson group"
authors = [{ name = "Rouven Reuter" }]
requires-python = ">=3.10"
dynamic = ["dependencies", "version"]
license = { file = "LICENSE" }
readme = "README.md"

[project.urls]
homepage = "https://github.com/SmartMonkey-git/robinson-group-python-template"
repository = "https://github.com/SmartMonkey-git/robinson-group-python-template.git"
documentation = "https://github.com/SmartMonkey-git/robinson-group-python-template"
bugtracker = "https://github.com/SmartMonkey-git/robinson-group-python-template/issues"

[project.optional-dependencies]
test=[]

[tool.setuptools.dynamic.optional-dependencies]
test = {file = ["requirements/requirements_test.txt"]}

[tool.setuptools]
packages.find = { where = ["src"] }

[tool.setuptools_scm]
version_file = "src/project_name/_version.py"

[tool.setuptools.dynamic]
version = { attr = "project_name._version.version" }
dependencies = {file = ["requirements/requirements.txt"]}
