[build-system]
requires = ["setuptools>=80.9.0", "wheel==0.45.1", "setuptools_scm==8.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "deft-matcher"
description = "Dextrous and Extendable Free Text Matcher"
authors = [{ name = "Patrick Nairne" }]
requires-python = ">=3.10"
dynamic = ["dependencies", "version"]
license = { file = "LICENSE" }
readme = "README.md"

[project.urls]
homepage = "https://github.com/psnairne/DEFTMatcher"
repository = "https://github.com/psnairne/DEFTMatcher.git"
documentation = "https://github.com/psnairne/DEFTMatcher"
bugtracker = "https://github.com/psnairne/DEFTMatcher/issues"

[project.optional-dependencies]
test=[]

[tool.setuptools.dynamic.optional-dependencies]
test = {file = ["requirements/requirements_test.txt"]}

[tool.setuptools]
packages.find = { where = ["src"] }

[tool.setuptools_scm]
version_file = "src/deft_matcher/_version.py"

[tool.setuptools.dynamic]
version = { attr = "deft_matcher._version.version" }
dependencies = {file = ["requirements/requirements.txt"]}
